@@ -1,3 +1,12 @@
+2019-12-11  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backport from mainline
+	2019-11-25  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/91786
+	* include/bits/fs_path.h (filesystem_error): Move definition before
+	the use in u8path.
+
 2019-12-10  Thomas Rodgers  <trodgers@redhat.com>
 
 	Backport from mainline
